<resources>
    <string name="app_name">LaCochalita</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Hello</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_food_list">Food List</string>
    <string name="Catergorias_populares">Popular Categories</string>
    <string name="lo_mas_visitado">Lo mas pedido</string>
    <string name="menu_menu">Menu</string>
    <string name="name_food">Food Name</string>
    <string name="price_food">Price</string>
    <string name="description">Description</string>
    <string name="comentarios">Show Comments</string>
    <string name="place_order">Place Order</string>
    <string name="Restaurant">La Cochalita</string>
    <string name="desc">Authentic Bolivian Food</string>
    <string name="signUp">Create a new account</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
</resources>
